# yomi

./: .gdbinit  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: test.yml
docs/: TESTING.md  XTASK_MIGRATION.md  debugging-guide.md
drivers/keyboard/: Cargo.toml
drivers/keyboard/src/: lib.rs
drivers/network/: Cargo.toml
drivers/network/src/: lib.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: lib.rs  main.rs  panic.rs  serial.rs  testing.rs  time.rs  vga.rs  vga_buffer.rs
kernel/src/boot/: boot.asm  boot64.asm  entry.asm  mod.rs  multiboot2.asm  multiboot2.rs
kernel/src/interrupts/: gdt.rs  handlers.rs  idt.rs  mod.rs  pic.rs  pit.rs  port.rs  timer.rs  tss.rs
kernel/src/io/: logging.rs  mod.rs
kernel/src/memory/: address.rs  allocator.rs  heap.rs  mod.rs  paging.rs
kernel/src/process/: capability.rs  context.rs  id.rs  ipc.rs  mod.rs  process.rs  state.rs  table.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs
scripts/: build-iso.sh  debug.sh  gdb-helpers.py  run-qemu.sh  run-tests.sh  setup-dev.sh
userland/coreutils/: Cargo.toml
userland/coreutils/src/: lib.rs
userland/init/: Cargo.toml
userland/init/src/: main.rs
userland/shell/: Cargo.toml
userland/shell/src/: main.rs
xtask/: Cargo.toml  clippy.toml
xtask/src/: build.rs  debug.rs  iso.rs  main.rs  qemu.rs  setup.rs  test.rs  util.rs
