[workspace]
resolver = "2"

members = [
    "kernel",
    "drivers/keyboard",
    "drivers/network",
    "userland/init",
    "userland/shell",
    "userland/coreutils",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Yomi Team"]
license = "MIT"

[workspace.dependencies]
spin = { version = "0.9", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 2
