[package]
name = "yomi-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
spin.workspace = true
lazy_static.workspace = true
bitflags.workspace = true
linked_list_allocator.workspace = true

uart_16550 = "0.2"
x86_64 = "0.14"
pic8259 = "0.10"

[dependencies.bootloader]
version = "0.9"
features = ["map_physical_memory"]

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "yomi-kernel"
path = "src/main.rs"
