[package]
name = "yomi-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Yomi OS Kernel - x86_64 security-focused operating system kernel"
readme = "README.md"
keywords = ["kernel", "os", "security", "x86_64", "no-std"]

[dependencies]
spin = "0.9"
bitflags = "2.4"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "yomi-kernel"
path = "src/main.rs"
